tests/ui/typeck/struct-enum-wrong-args.stderr
error[E0061]: this enum variant takes 1 argument but 2 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:6:13
   |
LL |     let _ = Some(3, 2);
   |             ^^^^  ---
   |                   | |
   |                   | unexpected argument of type `{integer}`
   |                   help: remove the extra argument
   |
note: tuple variant defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL

error[E0061]: this enum variant takes 1 argument but 3 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:7:13
   |
LL |     let _ = Ok(3, 6, 2);
   |             ^^    -  - unexpected argument of type `{integer}`
   |                   |
   |                   unexpected argument of type `{integer}`
   |
note: tuple variant defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
help: remove the extra arguments
   |
LL -     let _ = Ok(3, 6, 2);
LL +     let _ = Ok(3);
   |

error[E0061]: this enum variant takes 1 argument but 0 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:8:13
   |
LL |     let _ = Ok();
   |             ^^-- an argument is missing
   |
note: tuple variant defined here
  --> $SRC_DIR/core/src/result.rs:LL:COL
help: provide the argument
   |
LL |     let _ = Ok(/* value */);
   |               ~~~~~~~~~~~~~

error[E0061]: this struct takes 1 argument but 0 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:9:13
   |
LL |     let _ = Wrapper();
   |             ^^^^^^^-- an argument of type `i32` is missing
   |
note: tuple struct defined here
  --> $DIR/struct-enum-wrong-args.rs:2:8
   |
LL | struct Wrapper(i32);
   |        ^^^^^^^
help: provide the argument
   |
LL |     let _ = Wrapper(/* i32 */);
   |                    ~~~~~~~~~~~

error[E0061]: this struct takes 1 argument but 2 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:10:13
   |
LL |     let _ = Wrapper(5, 2);
   |             ^^^^^^^  ---
   |                      | |
   |                      | unexpected argument of type `{integer}`
   |                      help: remove the extra argument
   |
note: tuple struct defined here
  --> $DIR/struct-enum-wrong-args.rs:2:8
   |
LL | struct Wrapper(i32);
   |        ^^^^^^^

error[E0061]: this struct takes 2 arguments but 0 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:11:13
   |
LL |     let _ = DoubleWrapper();
   |             ^^^^^^^^^^^^^-- two arguments of type `i32` and `i32` are missing
   |
note: tuple struct defined here
  --> $DIR/struct-enum-wrong-args.rs:3:8
   |
LL | struct DoubleWrapper(i32, i32);
   |        ^^^^^^^^^^^^^
help: provide the arguments
   |
LL |     let _ = DoubleWrapper(/* i32 */, /* i32 */);
   |                          ~~~~~~~~~~~~~~~~~~~~~~

error[E0061]: this struct takes 2 arguments but 1 argument was supplied
  --> $DIR/struct-enum-wrong-args.rs:12:13
   |
LL |     let _ = DoubleWrapper(5);
   |             ^^^^^^^^^^^^^--- an argument of type `i32` is missing
   |
note: tuple struct defined here
  --> $DIR/struct-enum-wrong-args.rs:3:8
   |
LL | struct DoubleWrapper(i32, i32);
   |        ^^^^^^^^^^^^^
help: provide the argument
   |
LL |     let _ = DoubleWrapper(5, /* i32 */);
   |                          ~~~~~~~~~~~~~~

error[E0061]: this struct takes 2 arguments but 3 arguments were supplied
  --> $DIR/struct-enum-wrong-args.rs:13:13
   |
LL |     let _ = DoubleWrapper(5, 2, 7);
   |             ^^^^^^^^^^^^^     ---
   |                               | |
   |                               | unexpected argument of type `{integer}`
   |                               help: remove the extra argument
   |
note: tuple struct defined here
  --> $DIR/struct-enum-wrong-args.rs:3:8
   |
LL | struct DoubleWrapper(i32, i32);
   |        ^^^^^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0061`.
